--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,13 +78,13 @@ build_job:
         docker tag nfs-backup-orc gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_8
         docker push gesiscss/nfs-backup-orc:$CI_COMMIT_SHA_8
       fi;
-#      if git diff HEAD~ --name-only | egrep 'pod_scripts/Dockerfile|pod_scripts/scripts/'; then
-#        echo "####### gesiscss/scripts-orc:$CI_COMMIT_SHA_8"
-#        docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
-#        docker build -t scripts-orc scripts/.
-#        docker tag scripts-orc gesiscss/scripts-orc:$CI_COMMIT_SHA_8
-#        docker push gesiscss/scripts-orc:$CI_COMMIT_SHA_8
-#      fi;
+      if git diff HEAD~ --name-only | egrep 'pod_scripts/Dockerfile|pod_scripts/scripts/'; then
+        echo "####### gesiscss/pod-scripts-orc:$CI_COMMIT_SHA_8"
+        docker login -u=$DOCKER_USERNAME -p=$DOCKER_PASSWORD
+        docker build -t pod-scripts-orc pod_scripts/.
+        docker tag pod-scripts-orc gesiscss/pod-scripts-orc:$CI_COMMIT_SHA_8
+        docker push gesiscss/pod-scripts-orc:$CI_COMMIT_SHA_8
+      fi;
   only:
 #    - master
     - dev
