jhub: enable continuous pre-puller + disable admin access

--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -9,9 +9,7 @@ hub:
   db:
     type: postgres
   extraConfig: |
-    c.Authenticator.admin_users = {'kenan.erdogan@gesis.org', 'arnim.bleier@gesis.org'}
     c.Authenticator.shibboleth_logout_url = 'https://notebooks.gesis.org/Shibboleth.sso/Logout?return=https://notebooks.gesis.org/'
-    c.Authenticator.enable_auth_state = True
   resources:
     requests:
       cpu: "0.5"
@@ -51,10 +49,16 @@ auth:
   type: custom
   custom:
     className: "jhub_shibboleth_auth.shibboleth_auth.ShibbolethAuthenticator"
+  admin:
+    access: false
+    users: {'kenan.erdogan@gesis.org', 'arnim.bleier@gesis.org'}
+  state:
+    enabled: true
 
 singleuser:
 #  nodeSelector:
 #    worker1: production
+  schedulerStrategy: spread
   storage:
     capacity: 15Gi
   image:
@@ -66,6 +70,10 @@ singleuser:
   memory:
     guarantee: 2G
     limit: 4G
+
+prePuller:
+  continuous:
+    enabled: true
 
 cull:
   # kill user pods if idle for 30 mins - default is 1 hour
