deploy gesiscss/k8s-binderhub-orc:488ec17f on production

--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -110,9 +110,12 @@ service:
 
 image:
   name: gesiscss/k8s-binderhub-orc
-  tag: 0e62cc1f
+  tag: 488ec17f
 
 baseUrl: /binder/
+
+imageCleaner:
+  inodeAvailThreshold: 0
 
 hub:
   url: https://notebooks.gesis.org/binder/jupyter/
