--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -9,13 +9,13 @@ map $http_upgrade $connection_upgrade {
 upstream orc-site {
   server 194.95.75.9:30078; # private node ip
   server 194.95.75.10:30078;
-  server 194.95.75.11:30078;
+  #server 194.95.75.11:30078;
 }
 
 upstream grafana {
   server 194.95.75.9:30075;
   server 194.95.75.10:30075;
-  server 194.95.75.11:30075;
+  #server 194.95.75.11:30075;
 }
 
 upstream pod-scripts {
@@ -25,19 +25,19 @@ upstream pod-scripts {
 upstream jhub {
   server 194.95.75.9:30080;
   server 194.95.75.10:30080;
-  server 194.95.75.11:30080;
+  #server 194.95.75.11:30080;
 }
 
 upstream bhub {
   server 194.95.75.9:30081;
   server 194.95.75.10:30081;
-  server 194.95.75.11:30081;
+  #server 194.95.75.11:30081;
 }
 
 upstream bjhub {
   server 194.95.75.9:30082;
   server 194.95.75.10:30082;
-  server 194.95.75.11:30082;
+  #server 194.95.75.11:30082;
 }
 
 # HTTP server to redirect all 80 traffic to SSL/HTTPS
