--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -9,7 +9,7 @@ map $http_upgrade $connection_upgrade {
 upstream orc-site {
   server 194.95.75.9:30178; # private node ip
   server 194.95.75.10:30178;
-  server 194.95.75.11:30178;
+  #server 194.95.75.11:30178;
 }
 
 upstream jhub {
@@ -18,19 +18,19 @@ upstream jhub {
   # server 194.95.75.9:30080 weight=3;
   server 194.95.75.9:30180;
   server 194.95.75.10:30180;
-  server 194.95.75.11:30180;
+  #server 194.95.75.11:30180;
 }
 
 upstream bhub {
   server 194.95.75.9:30181;
   server 194.95.75.10:30181;
-  server 194.95.75.11:30181;
+  #server 194.95.75.11:30181;
 }
 
 upstream bjhub {
   server 194.95.75.9:30182;
   server 194.95.75.10:30182;
-  server 194.95.75.11:30182;
+  #server 194.95.75.11:30182;
 }
 
 # HTTP server to redirect all 80 traffic to SSL/HTTPS
