use jupyterhub 0.9.0rc1 on staging

--- a/jupyterhub/docker/k8s_hub/Dockerfile
+++ b/jupyterhub/docker/k8s_hub/Dockerfile
@@ -1,14 +1,6 @@
-# https://github.com/gesiscss/jhub_shibboleth_auth/tree/89e1a4b5ec49eafd55c583ef06d8012f88393dc6/docker/k8s_hub
-FROM gesiscss/k8s-hub:v0.6-69797588
+# https://github.com/gesiscss/jhub_shibboleth_auth/tree/f1ce8692bdea0c02c1f4cdac643101323bf45ba7/docker/k8s_hub
+FROM gesiscss/k8s-hub:0e1225e-e0c6f7f9
 
 USER root
-RUN mv /home/jovyan/.local/share/jupyter/hub/templates/page.html /home/jovyan/.local/share/jupyter/hub/templates/page_base.html
-ADD templates/page.html /home/jovyan/.local/share/jupyter/hub/templates/page.html
-#RUN mv /usr/local/share/jupyter/hub/templates/admin.html /usr/local/share/jupyter/hub/templates/admin_base.html
-#ADD templates/admin.html /usr/local/share/jupyter/hub/templates/admin.html
-# /home/jovyan/.local/share/jupyter/hub/templates
-RUN mv /home/jovyan/.local/share/jupyter/hub/templates/admin.html /home/jovyan/.local/share/jupyter/hub/templates/admin_base.html
-ADD templates/admin.html /home/jovyan/.local/share/jupyter/hub/templates/admin.html
-RUN mv /home/jovyan/.local/share/jupyter/hub/templates/error.html /home/jovyan/.local/share/jupyter/hub/templates/error_base.html
-ADD templates/error.html /home/jovyan/.local/share/jupyter/hub/templates/error.html
+COPY templates /srv/jhub_custom_templates
 USER ${NB_USER}
