use jupyterhub 0.9.0 and jhub_shibboleth_auth 1.1.0

--- a/jupyterhub/docker/k8s_hub/Dockerfile
+++ b/jupyterhub/docker/k8s_hub/Dockerfile
@@ -1,5 +1,5 @@
-# https://github.com/gesiscss/jhub_shibboleth_auth/tree/f1ce8692bdea0c02c1f4cdac643101323bf45ba7/docker/k8s_hub
-FROM gesiscss/k8s-hub:0e1225e-e0c6f7f9
+# https://github.com/gesiscss/jhub_shibboleth_auth/tree/5544cd76288a1323342476f5f41486731a7cd238/docker/k8s_hub
+FROM gesiscss/k8s-hub:6162c7b-v1.1.0
 
 USER root
 COPY templates /srv/jhub_custom_templates
