--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -113,7 +113,7 @@ auth:
   custom:
     className: "jhub_shibboleth_auth.shibboleth_auth.ShibbolethAuthenticator"
   admin:
-    access: false
+    access: true
     users: ['kenan.erdogan@gesis.org', 'arnim.bleier@gesis.org']
   state:
     enabled: true
