--- a/binderhub/config_test.yaml
+++ b/binderhub/config_test.yaml
@@ -12,6 +12,9 @@ jupyterhub:
       limits:
         cpu: "0.5"
         memory: 1Gi
+    extraConfig:
+      neverRestart: |
+        c.KubeSpawner.extra_pod_config.update({'restart_policy': 'Never'})
 
   proxy:
 #    nodeSelector:
@@ -20,7 +23,6 @@ jupyterhub:
       enabled: false
     service:
       type: NodePort
-      nodePort: 30182
       nodePorts:
         http: 30182
     chp:
@@ -31,14 +33,6 @@ jupyterhub:
         limits:
           cpu: "0.5"
           memory: 512Mi
-    nginx:
-      resources:
-        requests:
-          cpu: "0.2"
-          memory: 512Mi
-        limits:
-          cpu: "0.5"
-          memory: 1Gi
 
   singleuser:
     schedulerStrategy: spread
@@ -85,8 +79,6 @@ resources:
 #nodeSelector:
 #  worker1: production
 
-googleAnalyticsCode: 'staging'
-
 registry:
   enabled: true
   prefix: gesiscss/orc-binder-
@@ -103,14 +95,39 @@ imageCleaner:
 service:
   type: NodePort
   nodePort: 30181
-  nodePorts:
-    http: 30181
-
-image:
-  name: gesiscss/k8s-binderhub-orc
-  tag: "62af0b10"
 
 baseUrl: /binder/
 
 hub:
   url: https://notebooks-test.gesis.org/binder/jupyter/
+
+template:
+  variables:
+    is_staging: True
+    is_production: False
+  path: /etc/binderhub/templates/binderhub/templates
+#  static:
+#    path: /etc/binderhub/templates/binderhub/static
+#    urlPrefix: extra_static/
+
+initContainers:
+  - name: git-clone-templates
+    image: alpine/git
+    args:
+      - clone
+      - --single-branch
+      - --branch=dev
+      - --
+      - https://github.com/gesiscss/orc.git
+      - /etc/binderhub/templates
+    securityContext:
+      runAsUser: 0
+    volumeMounts:
+      - name: custom-templates
+        mountPath: /etc/binderhub/templates
+extraVolumes:
+  - name: custom-templates
+    emptyDir: {}
+extraVolumeMounts:
+  - name: custom-templates
+    mountPath: /etc/binderhub/templates
