update singleuser image to install some r packages

--- a/jupyterhub/docker/singleuser/Dockerfile
+++ b/jupyterhub/docker/singleuser/Dockerfile
@@ -2,6 +2,7 @@
 # https://github.com/jupyter/docker-stacks/tree/master/datascience-notebook
 FROM jupyter/datascience-notebook:702d2f6a3eaa
 
+RUN pip install --upgrade pip
 RUN pip install --no-cache jupyterhub==0.9.1
 
 # More R packages
@@ -22,13 +23,11 @@ RUN pip install --no-cache jupyterhub==0.9.1
 # https://anaconda.org/brown-data-science/repo
 RUN conda install --quiet --yes \
     -c conda-forge \
-#    'r-tm=0.7*' \
+    'r-tm=0.7*' \
+    'r-topicmodels=0.2*' \
+    'r-lda=1.4*' \
     'lxml=4.2.*' \
     'wordcloud=1.4.*' && \
-#    conda install --quiet --yes \
-#    -c brown-data-science \
-#    'r-lda=1.4*' \
-#    'r-topicmodels=0.2*' && \
 #    conda install --quiet --yes \
 #    -c bitnik \
 #    'r-opennlpdata=1.5.*' \
