--- a/k8s_dashboard/influxdb.yaml
+++ b/k8s_dashboard/influxdb.yaml
@@ -15,7 +15,7 @@ spec:
         worker1: production  # because of hostPath PVs
       containers:
       - name: influxdb
-        image: gcr.io/google_containers/heapster-influxdb-amd64:v1.3.3
+        image: k8s.gcr.io/heapster-influxdb-amd64:v1.5.2
         volumeMounts:
         - mountPath: /data
           name: influxdb-storage
