prometheus and grafana helm configs

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ jupyterhub/secret.yaml
 jupyterhub/secret_test.yaml
 jupyterhub/secret_local.yaml
 nginx_shibboleth/shibboleth/conf/ignore
-
+monitoring/grafana_secret.yaml
