--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -7,11 +7,8 @@ hub:
     name: gesiscss/k8s-hub-orc
     tag: "12a2c99f"
   # use default deployment strategy (rollingUpdate)
-  deploymentStrategy: {}
-#    type: "RollingUpdate"
-#    rollingUpdate:
-#    - maxUnavailable: "25%",
-#    - maxSurge: "25%"
+  deploymentStrategy:
+    type: RollingUpdate
   db:
     type: postgres
   extraConfig: |
