--- a/jupyterhub/config_local.yaml
+++ b/jupyterhub/config_local.yaml
@@ -4,7 +4,8 @@ hub:
     name: gesiscss/k8s-hub-orc-test
     tag: local-7393ec8
 #    tag: local-7393ec8-templates
-  deploymentStrategy: {}
+  deploymentStrategy:
+    type: RollingUpdate
   db:
     type: postgres
   extraConfig: |
