--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -3,7 +3,7 @@ hub:
 #  nodeSelector:
 #    worker1: production
   annotations:
-    prometheus.io/path: "/jupyter/hub/metrics"
+    prometheus.io/scrape: 'false'
   image:
     name: gesiscss/k8s-hub-orc
     tag: "87783d2d"
