deploy gesiscss/k8s-hub:2ff9218-v1.2.0. and enable debug mode on staging.

--- a/binderhub/config_test.yaml
+++ b/binderhub/config_test.yaml
@@ -1,4 +1,6 @@
 jupyterhub:
+  debug:
+    enabled: true
   hub:
     baseUrl: /binder/jupyter/
 #    nodeSelector:
@@ -72,6 +74,9 @@ build:
     USER $NB_USER
 
 # below is for binder
+debug:
+  enabled: true
+
 resources:
   requests:
     cpu: "0.25"
