--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -1,3 +1,6 @@
+debug:
+  enabled: true
+
 hub:
   baseUrl: /jupyter/
 #  nodeSelector:
@@ -6,7 +9,7 @@ hub:
     prometheus.io/scrape: 'false'
   image:
     name: gesiscss/k8s-hub-orc
-    tag: "87783d2d"
+    tag: "eb80d208"
   # use default deployment strategy (rollingUpdate)
   deploymentStrategy:
     type: RollingUpdate
