--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -14,8 +14,10 @@ upstream orc-site {
 
 upstream grafana {
   server 194.95.75.9:30075;
-  server 194.95.75.10:30075;
-  server 194.95.75.11:30075;
+}
+
+upstream prometheus {
+  server 194.95.75.9:30073;
 }
 
 upstream pod-scripts {
@@ -106,6 +108,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    # Prometheus
+    location /prometheus/ {
+        # https://github.com/prometheus/prometheus/issues/2193
+        proxy_set_header Accept-Encoding "";
+        proxy_pass http://prometheus/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        sub_filter_types text/html;
+        sub_filter_once off;
+        sub_filter '="/' '="/prometheus/';
+        sub_filter 'var PATH_PREFIX = "";' 'var PATH_PREFIX = "/prometheus";';
+        rewrite ^/prometheus/?$ /prometheus/graph redirect;
+        rewrite ^/prometheus/(.*)$ /$1 break;
     }
 
     # pod scripts
