add nodeselector for build and user pods (worker2 has storage problem). and increase proxy buffers of nginx.

--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -48,8 +48,9 @@ jupyterhub:
     memory:
       guarantee: 2G
       limit: 8G
-#    nodeSelector:
-#      worker1: production
+    nodeSelector:
+      worker1: production
+      worker3: lovelace
 
   cull:
     # kill user pods if idle for 30 mins
@@ -61,8 +62,9 @@ jupyterhub:
     maxAge: 21600
 
 build:
-#  nodeSelector:
-#    worker1: production
+  nodeSelector:
+    worker1: production
+    worker3: lovelace
   repo2dockerImage: jupyter/repo2docker:d2f7ebd
   # to give custom "Binder inaccessible" message (login.html)
   appendix: |
