--- a/binderhub/config_test.yaml
+++ b/binderhub/config_test.yaml
@@ -48,8 +48,9 @@ jupyterhub:
     memory:
       guarantee: 256M
       limit: 256M
-#    nodeSelector:
-#      worker1: production
+    nodeSelector:
+      worker1: production
+      worker3: lovelace
 
   cull:
     # kill user pods if idle for 10 mins
@@ -57,8 +58,9 @@ jupyterhub:
     every: 660
 
 build:
-#  nodeSelector:
-#    worker1: production
+  nodeSelector:
+    worker1: production
+    worker3: lovelace
   repo2dockerImage: jupyter/repo2docker:d2f7ebd
   # to give custom "Binder inaccessible" message (login.html)
   appendix: |
