use gesiscss/k8s-hub:0.7.0-v1.3.0

--- a/jupyterhub/docker/k8s_hub/Dockerfile
+++ b/jupyterhub/docker/k8s_hub/Dockerfile
@@ -1,5 +1,5 @@
-# https://github.com/gesiscss/jhub_shibboleth_auth/tree/c820dbfbeb37253bf7c0068c515197a981b60fe1/docker/k8s_hub
-FROM gesiscss/k8s-hub:0.7.0-beta.2-v1.3.0
+# https://github.com/gesiscss/jhub_shibboleth_auth/tree/69884e3c42f487bcb7ddc9085fc00873c871acf8/docker/k8s_hub
+FROM gesiscss/k8s-hub:0.7.0-v1.3.0
 
 USER root
 COPY templates /srv/jhub_custom_templates
